--- a/exercises/upside-down-tetris/css/style.css
+++ b/exercises/upside-down-tetris/css/style.css
@@ -11,7 +11,8 @@
     border-width: 12px;
     border-style: outset;
     padding: 20px;
-    display: inline-block;                     
+    display: inline-block;
+    border-color: black                     
 }
 
 .red {
@@ -24,7 +25,7 @@
 
 .green {
     background-color: green;
-    border-radius: 20px 0px 20px 0px;;
+    border-radius: 20px 0px 20px 0px;
     transform: scale(0.80);
     height: 5px;
     border: 10px groove rgb(0, 1, 0);
@@ -58,4 +59,12 @@
     border-radius: 24px 24px 24px 24px;
     transform: rotate(45deg);
     transform: scale(0.75);
+}
+
+.tetris-block-1 {
+    border-width: 12px;
+    border-style: solid;
+    padding: 20px;
+    display: inline-block;
+    border-color: black;                     
 }
