--- a/projects/license/css/style.css
+++ b/projects/license/css/style.css
@@ -6,62 +6,77 @@
 
     Good luck, and have fun!
 */
+
 #license {
     width: 700px;
-    border: 5px solid black;
-    border-radius: 5%;
-    padding: 24px
+    border: 3px solid black;
+    border-radius: 24px;
+    padding: 14px
+}
+
+h1 {
+    color:darkblue;
+    font-size: 50px;
+    padding-left: 24px;
 }
 
 #left-side {
     display: inline-block;
-    width: 65%
+    width: 65%;
+}
+
+div#left-side h4 {
+    font-style: bold;
+    font-size: 25px;
+    text-align:center;
+    color: white;
+    background-color: darkblue;
+    padding: 10px;
 }
 
 #right-side {
     display: inline-block;
-    width: 34%
-}
-
-#right-side img {
-    width: 100%;
+    width: 34%;
 }
 
 #id-and-expiration div {
     display: inline-block;
-    color: red;
+    color: darkblue;
     font-weight: bold;
+    padding-inline-start: 25px;
 }
 
-#small-pic-container {
+#small-pic-container,
+#data-fields {
     display: inline-block;
-    width: 80px
+    padding: 15px;
 }
 
 #small-pic-container img {
-    width: 34%;
-    display: inline-block
+    width: 80px;
 }
 
-#data-fields div {
+div#address {
+    padding-left: 14px;
+}
+
+#data-left,
+#data-right {
     display: inline-block;
-}
-
-#data-right{
-    color:blue;
-    display: inline-block;
-}
-
-#data-fields,
-#data-left {
-    display: inline-block;
-}
-
-#donor {
-    color: red
+    padding: 5px
 }
 
 #signature {
     text-align: center;
     font-family: cursive;
+    font-style: bold;
+}
+
+#right-side img {
+    width: 100%
+}
+
+#donor,
+#real-id {
+    display: inline-block;
 }
