--- a/projects/license/css/style.css
+++ b/projects/license/css/style.css
@@ -11,13 +11,15 @@
     width: 700px;
     border: 3px solid black;
     border-radius: 24px;
-    padding: 14px
+    padding: 14px;
+    background-color:tan
 }
 
 h1 {
     color:darkblue;
     font-size: 50px;
     padding-left: 24px;
+    margin: 0px
 }
 
 #left-side {
