--- a/exercises/single-column-layouts-drills/css/drill.css
+++ b/exercises/single-column-layouts-drills/css/drill.css
@@ -1,6 +1,6 @@
 /* Drill 1 - Write your code solution below */
 #column-d1 {
-    width: 300px
+    width: 300px;
 }
 
 /* Drill 2 - Write your code solution below */
