--- a/exercises/product-showcase-site/css/style.css
+++ b/exercises/product-showcase-site/css/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+h1 {
+    text-align: center;
+}
+
 body {
     margin: 0px;
     font-family: sans-serif;
@@ -15,11 +19,20 @@ body {
     padding: 24px;
 }
 
-.light-container {
+.grey-container {
     background-color: grey;
 }
 
 .dark-container {
     background-color: black;
-    color:white
+    color:white;
+}
+
+.lightgrey-container {
+    background-color: lightgrey;
+}
+
+.single-column img{
+    width: 500px;
+    border-radius: 10%;
 }
