--- a/projects/license/css/style.css
+++ b/projects/license/css/style.css
@@ -12,7 +12,7 @@
     border: 3px solid black;
     border-radius: 24px;
     padding: 14px;
-    background-color:tan
+    background: linear-gradient(to right, tan, orange);
 }
 
 h1 {
@@ -48,6 +48,10 @@ div#left-side h4 {
     padding-inline-start: 25px;
 }
 
+span {
+    color: red;
+}
+
 #small-pic-container,
 #data-fields {
     display: inline-block;
@@ -56,30 +60,41 @@ div#left-side h4 {
 
 #small-pic-container img {
     width: 80px;
+    opacity: 50%;
 }
 
 div#address {
-    padding-left: 14px;
+    padding-left: 25px;
+    padding-top: 10px;
+    font-weight: bold;
 }
 
 #data-left,
 #data-right {
     display: inline-block;
-    padding: 5px
+    padding: 5px;
+    font-weight: bold;
+    color: darkblue;
 }
 
-#signature {
+div#signature {
     text-align: center;
-    font-family: cursive;
-    font-style: bold;
+    font-family: "Ms Madi";
+    font-weight: 400;
+    font-style: normal;
 }
 
 #right-side img {
-    width: 100%
+    width: 100%;
+    padding-bottom: 15px;
 }
 
 #donor,
 #real-id {
     display: inline-block;
     text-align: right
+}
+
+#donor {
+    color: red
 }
