--- a/projects/mebay/css/style.css
+++ b/projects/mebay/css/style.css
@@ -12,29 +12,36 @@ body {
     color: #111111;
 }
 
+#header {
+    grid-area: head;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: green
+}
+
 #layouts {
     display: grid;
     grid-template-columns: 1fr 100px 400px 200px 1fr;
     grid-template-areas: 
-        ". column-area-1 column-area-2 column-area-3 .";
+        ". head head head ."
+        ". c-1 c-2 c-3 .";
 }
 
 #column-1 {
-    background-color: white;
     padding: 0px 12px;
-    grid-area: column-area-1;
+    grid-area: c-1;
 }
 
 #column-2 {
-    background-color: white;
-    padding: 0px 12px;
-    grid-area: column-area-2;
+    padding: 12px 0px 12px 0px;
+    grid-area: c-2;
 }
 
 #column-3 {
     background-color: white;
     padding: 0px 12px;
-    grid-area: column-area-3;
+    grid-area: c-3;
 }
 
 #layouts img {
@@ -53,5 +60,52 @@ body {
 }
 
 #header {
-    padding: 0px 20px
+    padding: 0px 20px;
+}
+
+#column-1 .side {
+    width: 70px;
+    display:block
+
+}
+
+#column-2 img {
+    width: 100%
+}
+
+.side {
+    border-radius: 10px;
+    border: 1px solid black;
+    padding: 2px
+}
+
+.side a:hover {
+    background-color: #888888;
+}
+
+#quan1 {
+   display: inline-block;
+   background-color: #E0E0E0;
+   border: 2px solid black;
+   padding: 5px;
+   border-radius: 24px;
+}
+
+#column-3 a {
+    display: block;
+    border: 2px solid black;
+    padding: 5px;
+    border-radius: 24px;
+    text-align: center;
+    text-decoration: none;
+    color:black;
+    margin: 10px;
+}
+
+#column-3 a:hover {
+    background-color: #E0E0E0;
+}
+
+#column-1 a:hover {
+    background-color: darkgrey
 }
