--- a/exercises/animagram-cards/css/style.css
+++ b/exercises/animagram-cards/css/style.css
@@ -40,7 +40,7 @@
     display: flex;
     justify-content: space-between;
     margin: 30px;
-    font-size: 25px
+    font-size: 25px;
 }
 
 .animagram-header {
@@ -48,6 +48,6 @@
     justify-content: space-between;
     margin: 30px;
     font-size: 25px;
-    padding: 5px
+    padding: 5px;
 }
 
