--- a/exercises/trek-cards/css/style.css
+++ b/exercises/trek-cards/css/style.css
@@ -41,4 +41,12 @@
     text-decoration: none;
     font-size: 24px;
     text-align: center;
+    transition: 
+        background-color 0.5s,
+        color 0.5s;
+}
+
+.card-style-1 a:hover {
+    background-color: lightseagreen;
+    color: black
 }
