--- a/exercises/animagram-cards/css/style.css
+++ b/exercises/animagram-cards/css/style.css
@@ -22,31 +22,32 @@
 }
 
 .card-style-2 img {
-    width: 100%;
+    display: block;
+    width: 60%;
+    margin: 0 auto;
     border-radius: 100%;
-    padding: 50px
 }
 
 .card-style-2 h2 {
-    margin: 24px;
+    margin: 20px;
     text-align: center;
 }
 
 .card-style-2 p {
-    margin: 24px;
+    margin: 15px;
 }
 
 .animagram-footer {
     display: flex;
     justify-content: space-between;
-    margin: 30px;
+    margin: 20px;
     font-size: 25px;
 }
 
 .animagram-header {
     display: flex;
     justify-content: space-between;
-    margin: 30px;
+    margin: 20px;
     font-size: 25px;
     padding: 5px;
 }
