--- a/exercises/three-heroes/css/style.css
+++ b/exercises/three-heroes/css/style.css
@@ -14,58 +14,124 @@
     font-size: 8vw;
     margin-bottom: 5vh;
     margin-right: 5vw;
-    color: white
+    color: white;
 }
 
 #hero-1 h4 {
     font-size: 3vw;
     margin: 0px 5vw 0px 0px;
-    color: white
+    color: white;
 }
 
 #hero-1 a {
     font-size: 1.5vw;
     display: inline-block;
-    background-color: white;
-    color: black;
+    background-color: red;
+    color: white;
     text-decoration: none;
     padding: 24px;
     margin: 5vh 5vw 10vh 0px;
+    box-shadow: 5px 5px darkred;
 }
 
-#hero-4 {
+#hero-1 a:hover {
+    opacity: 90%;
+    color: black;
+}
+
+#hero-2 {
     background-image: url("../images/flowerfield.jpg");
     height: 100vh;
     background-size: cover;
     background-position: center center;
-    display: flex;
-    justify-content: center; 
-    align-items: center;
+    position: relative;
 }
 
 #hero-2 .hero-content {
-    text-align: center;
-    color: white;
-    padding-top: 20vh; 
+    position: absolute;
+    top: 10%;
+    left: 15%;
 }
 
-#hero-2 h2 {
+#hero-2 h1 {
     font-size: 8vw;
     margin-bottom: 5vh;
     margin-right: 5vw;
+    color: white;
+    padding: 24px;
 }
 
 #hero-2 h4 {
     font-size: 3vw;
     margin: 0px 5vw 0px 0px;
+    color: white;
+    padding: 24px;
 }
 
 #hero-2 a {
     font-size: 1.5vw;
     display: inline-block;
-    background-color: white;
-    color: #333333;
+    background-color: orangered;
+    color: white;
+    text-decoration: none;
+    padding: 24px;
+    margin: 5vh 5vw 10vh 20px;
+    box-shadow: 5px 5px red;
+
+}
+
+#hero-2 a:hover {
+    opacity: 90%;
+    color: black;
+}
+
+#hero-3 {
+    background-image: url("../images/redflowermountain.jpg");
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    justify-content: flex;
+    align-items: center;
+    align-items: flex-end;
+}
+
+#type-content {
+    padding: 10%;
+}
+
+#hero-3 .hero-content {
+    text-align: center;
+    color: white;
+    padding-top: 20vh; 
+}
+
+#hero-3 h1 {
+    font-size: 8vw;
+    margin-bottom: 5vh;
+    margin-right: 5vw;
+    color: white;
+}
+
+
+#hero-3 h4 {
+    color: white;
+    font-size: 3vw;
+    margin: 0px 5vw 0px 0px;
+}
+
+#hero-3 a {
+    font-size: 1.5vw;
+    display: inline-block;
+    background-color: olivedrab;
+    color: white;
     text-decoration: none;
     padding: 24px;
     margin: 5vh 5vw 10vh 0px;
+    box-shadow: 5px 5px olive;
+}
+
+#hero-3 a:hover {
+    opacity: 90%;
+    color: black;
 }
