--- a/exercises/themed-gallery-page/css/style.css
+++ b/exercises/themed-gallery-page/css/style.css
@@ -1,5 +1,5 @@
 #hero-1 {
-    background-image: url("../images/gorgeous-oak-hero-tree.jpg");
+    background-image: url("../images/camera-hero.jpg");
     height: 100vh;
     background-size: cover;
     background-position: center center;
@@ -28,10 +28,36 @@
 #hero-1 a {
     font-size: 1.5vw;
     display: inline-block;
-    background-color: olive;
+    background-color: white;
     color: black;
     font-weight: bold;
     text-decoration: none;
     padding: 24px;
     margin: 5vh 5vw 10vh 0px;
+    box-shadow: 5px 5px black
+}
+
+#hero-1 a:hover {
+    opacity: 90%;
+    color: white;
+    background-color: black;
+    box-shadow: none;
+}
+
+.horizontal-masonry-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    padding: 24px;
+    border: 10px solid #333333;
+}
+
+.horizontal-masonry-gallery img {
+    height: 250px;
+    flex: 1;
+    object-fit: cover;
+}
+
+h3 {
+    text-align: center;
 }
