--- a/exercises/Client-Navbars/css/style.css
+++ b/exercises/Client-Navbars/css/style.css
@@ -7,30 +7,80 @@ body {
     font-family: sans-serif;
 }
 
-#navbar {
-    background: linear-gradient(to bottom, green, #3e6d3e);
+#layout #sculpt-image {
+    background-image: url("../images/clay-sculpting.jpg");
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#sculpt-navbar {
+    background: linear-gradient(to bottom, #E6CEB5, #B59275);
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-#navbar a {
+#sculpt-navbar a {
     text-decoration: none;
     color: white;
     padding: 24px;
 }
 
-#navbar img {
-    width: 200px;
-}
-
-#navbar #logo {
+#sculpt-navbar #logo {
     margin-right: auto;
 }
 
-#navbar .cta-button {
-    background-color: white;
-    color: green;
+#sculpt-image img {
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+}
+
+#sculpt-header {
+    position: sticky;
+    top: 0px;
+}
+
+body {
+    margin: 0px;
+    font-family: sans-serif;
+}
+
+#mag-image {
+    background-image: url("../images/local-magazine.jpg");
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#mag-navbar {
+    background: linear-gradient(to bottom, orange, pink);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#mag-navbar a {
+    text-decoration: none;
+    color: darkslategray;
+    padding: 24px;
+}
+
+#mag-navbar h1 {
+    margin-right: auto;
+}
+
+#mag-navbar .cta-button {
+    background-color: whitesmoke;
+    color: darkslategray;
     border-radius: 36px;
     padding: 16px 24px;
     font-size: 20px;
@@ -40,19 +90,85 @@ body {
     margin-right: 24px;
 }
 
-#header {
+.cta-button a:hover {
+    opacity: 50%;
+    color: white;
+}
+
+#mag-image img {
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+}
+
+#mag-header {
     position: sticky;
     top: 0px;
 }
 
-#navbar-bottom {
-    background: linear-gradient(to bottom, yellowgreen, olive);
-    display: flex;
-    justify-content: space-between;
+body {
+    margin: 0px;
+    font-family: sans-serif;
 }
 
-#navbar-bottom a {
+#spook-image {
+    background-image: url("../images/pirate-kids.jpg");
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#spook-navbar {
+    background: linear-gradient(to bottom, orange, red);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#spook-navbar a {
     text-decoration: none;
+    color: black;
+    padding: 24px;
+}
+
+#spook-navbar h1 {
+    margin-right: auto;
+}
+
+#spook-navbar .cta-button {
+    background-color: whitesmoke;
+    color: darkslategray;
+    border-radius: 36px;
+    padding: 16px 24px;
+    font-size: 20px;
+    font-weight: bold;
+    min-width: 150px;
+    text-align: center;
+    margin-right: 24px;
+}
+
+.cta-button a:hover {
+    opacity: 50%;
     color: white;
-    padding: 12px 36px;
+}
+
+#spook-image img {
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+}
+
+#spook-header {
+    position: sticky;
+    top: 0px;
+}
+
+body {
+    margin: 0px;
+    font-family: sans-serif;
 }
