--- a/exercises/grrm/css/style.css
+++ b/exercises/grrm/css/style.css
@@ -229,7 +229,7 @@ body {
 #card-3,
 #aside,
 #main {
-    background-color: #00000077;
+    background-color: #00000077;                                                              
 
 }
 
@@ -453,13 +453,72 @@ body {
             "footer  footer  footer"
             "bottom  bottom  bottom";
     }
+
+    #header h1 {
+        font-size: 48px;
+    }
+
     #nav {
         flex-wrap: wrap;
     }
+
     #nav a {
-        flex: 210px
+        flex: 200px;
+        border-bottom: 2px solid gray
     }
+}
+/*Mobile Breakpoint screen*/
+@media screen and (max-width: 800px) {
+    #grid-layout {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "header"
+            "navbar"
+            "banner"
+            "card-1"
+            "card-2"
+            "card-3"
+            "aside"
+            "blog"
+            "footer"
+            "bottom";
+    }
+
+    #search-bar,
+    #search-button,
+    #shield-image {
+        display: none;
+    }
+
+    #header {
+        flex-direction: column;
+        align-items: center;
+    }
+
     #header h1 {
-        font-size: 45px
+        font-size: 36px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #nav {
+        flex-wrap: wrap;
+    }
+
+    #nav a {
+        flex: 150px;
+        border-bottom: 2px solid gray
+    }
+
+    #banner-container,
+    #card-1,
+    #card-2,
+    #card-3,
+    #aside,
+    #main {
+        background-color: transparent;                                                              
+        margin: 0px;
+        padding: 0px
     }
 }
