--- a/exercises/media-queries/css/style.css
+++ b/exercises/media-queries/css/style.css
@@ -211,3 +211,30 @@ a {
 ****************************************************************************/
 
 /* TODO: Add your media query code here */
+
+@media screen and (max-width:768px) {
+    #nav {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    #hero h1 {
+        font-size: 50px
+    }
+
+    #hero h3 {
+        font-size: 35px;
+    }
+
+    .two-cards,
+    
+    .three-cards {
+        flex-direction: column;
+    }
+
+    .card a {
+        display: block;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
