--- a/exercises/hover-galleries/css/style.css
+++ b/exercises/hover-galleries/css/style.css
@@ -22,6 +22,7 @@ body {
     padding: 24px;
     border-radius: 12px;
     text-align: center;
+
 }
 
 .cardpart1 a {
@@ -38,16 +39,17 @@ body {
 
 .cardpart1:hover {
     background-color: lightgreen;
-    box-shadow: 5px 5px 5px darkgreen;
-    transform: translateY(-5px)
+    box-shadow: 4px 4px 4px darkgreen;
+    transform: translateY(-4px)
     rotate(360deg);
+    transition: transform 1s 0.25s;
 }
 
 .cardpart1 {
     transition: 
-        background-coor 0.5s,
-        box-shadow 0.5,
-        transform 0.5s;
+        background-color 1s,
+        box-shadow 1,
+        transform 1s;
 }
 
 /*second container*/
@@ -59,18 +61,20 @@ body {
 }
 
 .cardpart2 {
+    background-color: black;
+    color: hotpink;
     flex: 300px;
-    border: 3px solid black;
-    margin: 24px;
-    padding: 24px;
+    border: 3px solid hotpink;
+    margin: 35px;
+    padding: 20px;
     border-radius: 12px;
     text-align: center;
 }
 
 .cardpart2 a {
     text-decoration: none;
-    color: black;
-    border: 3px solid black;
+    color: hotpink;
+    border: 3px solid hotpink;
     border-radius: 20px;
     display: block;
     padding: 12px;
@@ -79,8 +83,21 @@ body {
 
 /*second container effects*/
 
+.cardpart2 .card-content {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-8px);
+    transition:
+        opacity 0.5s,
+        visibility 0.5s,
+        transform 0.5s;
+}
 
-
+.cardpart2:hover .card-content {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0px);
+}
 
 /*third container*/
 
@@ -109,4 +126,78 @@ body {
     margin-top: 36px;
 }
 
-/*third container effects*/
+/*third container images*/
+
+#gal3-1 .card-front {
+    background-image: url("../images/dientes-circuit-trek-chile.jpg");
+    background-size: cover;
+    border-radius: 12px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+#gal3-2 .card-front {
+    background-image: url("../images/kalalau-trail-hawaii.jpg");
+    background-size: cover;
+    border-radius: 12px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+#gal3-3 .card-front {
+    background-image: url("../images/kungsleden-sweden.jpg");
+    background-size: cover;
+    border-radius: 12px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+#gal3-4 .card-front {
+    background-image: url("../images/mt-meru-tanzania.jpg");
+    background-size: cover;
+    border-radius: 12px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+/*End of image tags for third container
+onto the motion properties*/
+
+.cardpart3 {
+    position: relative;
+    border: 0px;
+    padding: 0px;
+}
+
+.cardpart3 .card-front,
+.cardpart3 .card-back {
+    border: 3px solid black;
+    border-radius: 12px;
+    padding: 24px;
+}
+
+.cardpart3 .card-back {
+    transform: scaleX(0);
+}
+
+.cardpart3 .card-front {
+    transition: transform 0.25s 0.25s; 
+}
+
+.cardpart3 .card-back {
+    transition: transform 0.25s;
+}
+
+.cardpart3:hover .card-front {
+    transform: scaleX(0);
+    transition: transform 0.25s;
+}
+
+.cardpart3:hover .card-back {
+    transform: scaleX(1);
+    transition: transform 0.25s 0.25s; 
+}
