--- a/exercises/Client-Navbars/css/style.css
+++ b/exercises/Client-Navbars/css/style.css
@@ -172,36 +172,29 @@ body {
     align-items: center;
 }
 
-#spook-image .spook-content {
-    position: relative;
-    left: 5%;
-}
-
-#spook-image h1 {
-    font-size: 5vw;
-    margin-bottom: 5vh;
-    margin-right: 5vw;
-    color: black;
-}
-
-#spook-image h4 {
-    font-size: 3vw;
-    margin: 0px 5vw 0px 0px;
-}
-
-#spook-image a {
-    font-size: 1.5vw;
-    display: inline-block;
-    background-color: red;
+#spook-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 70px;
+    padding-right: 70px;
+    background-color: black;
     color: white;
-    text-decoration: none;
-    padding: 24px;
-    margin: 5vh 5vw 10vh 0px;
-    box-shadow: 5px 5px darkred;
-    border-radius: 20px;
 }
 
-#spook-image a:hover {
+#spook-content a {
+    background-color: red;
+    color: black;
+    border-radius: 36px;
+    padding: 5px 5px;
+    font-size: 20px;
+    font-weight: bold;
+    min-width: 150px;
+    text-align: center;
+    text-decoration: none;
+}
+
+#spook-content a:hover {
     opacity: 90%;
     color: black;
 }
@@ -262,31 +255,4 @@ body {
     text-decoration: none;
     color: white;
     padding: 12px 36px;
-}
-
-#thirdfooter {
-    background: linear-gradient(to bottom, red, darkred);
-    padding: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-#thirdfooter a {
-    text-decoration: none;
-    font-size: large;
-    color: white;
-    font-weight: bold;
-}
-
-#thirdfooter a:hover {
-    color: black;
-}
-
-#thirdfooter-navbar {
-    width: 800px;
-    margin: 0px auto;
-    display: flex;
-    justify-content: space-between;
 }
