--- a/projects/portfolio/css/style.css
+++ b/projects/portfolio/css/style.css
@@ -12,19 +12,20 @@
     flex-direction: column;
     align-items: center;
     align-items: flex-end;
+    margin: 20px;
 }
 
 #hero-1 h1 {
     font-size: 8vw;
     margin-bottom: 5vh;
     margin: 5vw;
-    color: white
+    color: white;
 }
 
 #hero-1 h4 {
     font-size: 3vw;
     margin: 5vw;
-    color: white
+    color: white;
 }
 
 #hero-1 a {
@@ -52,6 +53,13 @@ body {
     justify-content: center;
 }
 
+.cards-space {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
 .card {
     width: 350px;
     border: 2px solid darkred;
@@ -67,7 +75,8 @@ body {
     );
     display: flex;
     flex-direction: column;
-    display: inline-block
+    display: inline-block;
+    justify-content: space-between;
 }
 
 .card img {
@@ -90,7 +99,6 @@ body {
 .card a {
     text-decoration: none;
     color: white;
-
     background-color: orangered;
     display: inline-block;
     width: 100%;
@@ -106,6 +114,6 @@ body {
 
 .card a:hover {
     background-color: transparent;
-    color: black
+    color: black;
 
 }
