--- a/projects/portfolio/css/style.css
+++ b/projects/portfolio/css/style.css
@@ -7,9 +7,13 @@ body {
     font-family: sans-serif;
 }
 
+#First-background {
+    background-color: #FAB37F;
+}
+
 #hero-1 {
     background-image: url("../images/Abstract_Re-Imagined.jpg");
-    height: 80vh;
+    height: 70vh;
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
@@ -20,7 +24,6 @@ body {
 #hero-1 .hero-content {
     justify-content: flex-start;
     text-align: left;
-    color: rgb(2, 2, 2);
     padding: 5vh 8vw;
 }
 
@@ -39,34 +42,50 @@ body {
     left: 10px; 
 }
 
-.spacer {
-    height: 100vh;
+#hero-1 a {
+    text-decoration: none;
+    color: white;
+    background-color: #8C1B24;
+    display: inline-block;
+    width: 40%;
+    padding: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    border: 3px solid #8C1B24;
+    border-radius: 20px;
+    transition: 
+        background-color 0.5s,
+        color 0.5s;
+}
+
+#hero-1 a:hover {
+    background-color: #EA7446;
+    color: #8C1B24;
+}
+
+#content-container {
+    max-width: 1000px;
+    margin: 0px auto;
 }
 
 .cards-space {
     display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: space-between;
 }
 
 .card {
-    width: 350px;
     border: 2px solid darkred;
-    border-radius: 5px;
-    padding: 10px;
+    margin: 48px 24px 24px;
+    border-radius: 20px;
+    padding: 12px 12px 24px;
+    text-align: center;
     /* x-offset y-offset blur-radius color */
-    box-shadow: -4px 4px 12px tan;
     background: linear-gradient(
         -50deg,
-        orangered,
-        orange,
-        tan
+        #F26A4B,
+        #EA7446
     );
-    display: flex;
-    flex-direction: column;
-    display: inline-block;
-    justify-content: space-between;
+    flex: 1;
 }
 
 .card img {
@@ -79,24 +98,29 @@ body {
     font-size: 36px;
     margin-top: 12px;
     margin-bottom: 0px;
+    color: #8C1B24;
 }
 
 .card p {
     font-size: 18px;
     flex: 1;
+    background-color :#F79056 ;
+    padding: 10px;
+    border-radius: 20px;
 }
 
 .card a {
     text-decoration: none;
     color: white;
-    background-color: orangered;
+    background-color: #8C1B24;
     display: inline-block;
     width: 100%;
     padding: 10px;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
-    border: 3px solid darkred;
+    border: 3px solid #8C1B24;
+    border-radius: 20px;
     transition: 
         background-color 0.5s,
         color 0.5s;
@@ -104,6 +128,58 @@ body {
 
 .card a:hover {
     background-color: transparent;
-    color: black;
+    color:#8C1B24 ;
+}
 
+/* Gallery page */
+
+* {
+    box-sizing:border-box;
+}
+
+body {
+    margin: 0px;
+    font-family: sans-serif;
+    background-color: #FAB37F;
+}
+
+h1 {
+    color: #8C1B24;
+    text-align: center;
+}
+
+.horizontal-masonry-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+}
+
+.horizontal-masonry-gallery img {
+    height: 250px;
+    flex: 1;
+    object-fit: cover;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    background-color: #8C1B24;
+    display: block;
+    margin: auto;
+    margin-bottom: 20px;
+    width: 40%;
+    padding: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    border: 3px solid #8C1B24;
+    border-radius: 20px;
+    transition: 
+        background-color 0.5s,
+        color 0.5s;
+}
+
+a:hover {
+    background-color: #EA7446;
+    color: #8C1B24;
 }
