--- a/projects/restaurant/css/style.css
+++ b/projects/restaurant/css/style.css
@@ -30,7 +30,7 @@ body {
 #navbar-top a {
     text-decoration: none;
     color: white;
-    padding: 24px 0px;
+    padding: 20px 0px;
 }
 
 #navbar-top .content-column div a {
@@ -38,7 +38,7 @@ body {
 }
 
 #navbar-top #logo img {
-    width: 150px;
+    width: 200px;
 }
 
 #navbar-top .cta-buttom {
@@ -63,13 +63,167 @@ body {
 
 #navbar-bottom a {
     text-decoration: none;
-    color: white;
+    color: black;
     padding: 12px 0px;
 }
 
+* {
+    box-sizing: border-box
+}
+
+body {
+    margin: 0px;
+    font-family: sans-serif;
+}
+
+.spacer {
+    height: 100vh;
+}
+
 #layout {
-    width: 600px;
+    width: 900px;
     margin: 48px auto;
     font-size: 24px;
     height: 150vh;
+}
+
+#hero-1 {
+    background-image: url("../images/bandeja-paisa-traditional-colombian-dish.jpg");
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    color: white;
+}
+
+#hero-1 h1 {
+    font-size: 8vw;
+    margin-bottom: 5vh;
+    margin-right: 5vw;
+    color: white;
+}
+
+#hero-1 h4 {
+    font-size: 5vw;
+    margin: 0px 5vw 0px 0px;
+    color: white;
+}
+
+#hero-1 a {
+    font-size: 2vw;
+    font-weight: bold;
+    display: inline-block;
+    background-color: #F0C08E;
+    color: black;
+    text-decoration: none;
+    padding: 15px;
+    margin: 5vh 2vw 10vh 0px;
+    box-shadow: 5px 5px #6E745D;
+    border-radius: 20px;
+}
+
+#hero-1 a:hover {
+    opacity: 90%;
+    color: black;
+}
+
+.section {
+    background-image: url("../images/penol-landscape.jpg");
+    padding: 48px;
+    background-size: cover;
+}
+
+.single-column {
+    min-width: 600px;
+    max-width: 1200px;
+    margin: 0px auto;
+}
+
+/*Content Layout Styles*/
+.side-by-side {
+    display: flex;
+    align-items: center;
+    margin: 48px 0px;
+    background-color: #F0C08E;
+    padding: 25px;
+    border-radius: 30px;
+    margin: 5vh 2vw 10vh 0px;
+    box-shadow: 5px 5px #6E745D;
+}
+
+.side-by-side .image-container {
+    flex: 1;
+}
+
+.side-by-side .text-container {
+    flex: 1;
+    padding: 36px;
+}
+
+.side-by-side .image-container img {
+    width: 100%;
+    border-radius: 20px;
+}
+
+.side-by-side .text-container h3 {
+    font-size: 30px;
+}
+
+.side-by-side .text-container a {
+    text-decoration: none;
+    color: white;
+    background-color: #6E745D;
+    display: inline-block;
+    padding: 24px 48px;
+    border-radius: 48px;
+    font-size: 15px;
+}
+
+.three-cards {
+    display: flex;
+}
+
+.card {
+    background-color: #F0C08E;
+    border: 2px solid #6E745D;
+    color: black;
+    margin: 48px 24px 24px;
+    padding: 12px 12px 24px;
+    text-align: center;
+    box-shadow: 4px 4px 8px 0px grey;
+    flex: 1;
+}
+
+.card img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+.three-cards {
+    margin-top: 48px;
+}
+
+.card a {
+    color: white;
+    text-decoration: none;
+    font-size: 12px;
+    background-color: #6E745D;
+    display: inline-block;
+    width: 100%;
+    padding: 10px;
+    margin-top: 24px;
+    text-align: center;
+    box-shadow: 5px 5px black;
+    border-radius: 30PX;
+    transition:
+        background-color .5s,
+        color .5s;
+}
+
+.card a:hover {
+    background-color: transparent;
+    color: #6E745D;
 }
