--- a/projects/restaurant/css/style.css
+++ b/projects/restaurant/css/style.css
@@ -152,9 +152,9 @@ body {
 }
 
 .side-by-side .image-container img {
-    width: 100%;
+    width: 80%;
     border-radius: 20px;
-    height: 300px;
+    height: 400px;
     object-fit: cover;
 }
 
@@ -172,6 +172,18 @@ body {
     font-size: 15px;
 }
 
+#content-container {
+    background-image: url("../images/chef-cooking2.jpg");
+    padding: 48px;
+    background-size: cover;
+}
+
+#content-container:hover {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0px); 
+}
+
 .three-cards {
     display: flex;
 }
@@ -179,18 +191,34 @@ body {
 .card {
     background-color: #F0C08E;
     border: 2px solid #6E745D;
+    border-radius: 30px;
     color: black;
     margin: 48px 24px 24px;
     padding: 12px 12px 24px;
     text-align: center;
     box-shadow: 4px 4px 8px 0px grey;
     flex: 1;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-8px); 
+    transition:
+        opacity 0.5s,
+        visibility 0.5s,
+        transform 0.5s; 
 }
+
+#content-container:hover .card {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0px); 
+}
+
 
 .card img {
     width: 100%;
-    height: 150px;
+    height: 200px;
     object-fit: cover;
+    border-radius: 30px;
 }
 
 .three-cards {
