--- a/projects/restaurant/css/style.css
+++ b/projects/restaurant/css/style.css
@@ -119,6 +119,11 @@ body {
     color: black;
 }
 
+.spacer {
+    height: 10vh;
+}
+
+
 .section {
     background-image: url("../images/penol-landscape.jpg");
     padding: 48px;
@@ -163,13 +168,25 @@ body {
 }
 
 .side-by-side .text-container a {
-    text-decoration: none;
     color: white;
+    text-decoration: none;
+    font-size: 20px;
     background-color: #6E745D;
     display: inline-block;
-    padding: 24px 48px;
-    border-radius: 48px;
-    font-size: 15px;
+    width: 200px;
+    padding: 20px;
+    margin-top: 24px;
+    text-align: center;
+    box-shadow: 5px 5px black;
+    border-radius: 30PX;
+    transition:
+        background-color .5s,
+        color .5s;
+}
+
+.side-by-side a:hover {
+    background-color: black;
+    color: #F0C08E;
 }
 
 #content-container {
@@ -197,22 +214,7 @@ body {
     padding: 12px 12px 24px;
     text-align: center;
     box-shadow: 4px 4px 8px 0px grey;
-    flex: 1;
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(-8px); 
-    transition:
-        opacity 0.5s,
-        visibility 0.5s,
-        transform 0.5s; 
 }
-
-#content-container:hover .card {
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0px); 
-}
-
 
 .card img {
     width: 100%;
@@ -243,6 +245,100 @@ body {
 }
 
 .card a:hover {
-    background-color: transparent;
-    color: #6E745D;
+    background-color: black;
+    color: #F0C08E;
+}
+
+.footer {
+    background-color: black;
+    color: white;
+    padding: 12px;
+}
+
+.footer a {
+    text-decoration: none;
+    color: white;
+}
+
+.footer i {
+    font-size: 30px;
+    padding: 5px;
+}
+
+.footer img {
+    flex-direction: column;
+    display: flex;
+    width: 100%;
+    height: 80px;
+    object-fit: contain;
+    margin-top: 30px;
+}
+
+.footer-navbar {
+    width: 800px;
+    margin: 0px auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-columns-navbar {
+    width: 800px;
+    margin: 0px auto;
+    padding: 48px 0px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-columns-navbar a {
+    display: block;
+    padding: 8px 0px;
+}
+
+/* menu page */
+
+#hero-2 {
+    background-image: url("../images/colombian-arepa-sandwich.webp");
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    color: white;
+}
+
+#hero-2 h1 {
+    font-size: 8vw;
+    margin-bottom: 5vh;
+    margin-right: 5vw;
+    color: white;
+}
+
+#hero-2 h4 {
+    font-size: 5vw;
+    margin: 0px 5vw 0px 0px;
+    color: white;
+}
+
+#hero-content-2 p {
+    display: block;
+    width: 10%; 
+    min-width: 500px;
+}
+
+#hero-2 a {
+    font-size: 2vw;
+    display: inline-block;
+    background-color: #F0C08E;
+    color: black;
+    text-decoration: none;
+    padding: 15px;
+    margin: 5vh 2vw 10vh 0px;
+    box-shadow: 5px 5px #6E745D;
+    border-radius: 20px;
+}
+
+#hero-2 a:hover {
+    opacity: 90%;
+    color: black;
 }
