--- a/projects/final-eval/css/style.css
+++ b/projects/final-eval/css/style.css
@@ -19,7 +19,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
-    color: white
+    color: white;
 }
 
 #three-columns {
@@ -58,22 +58,8 @@ a:hover {
         flex-direction: column;
         align-items: center;
     }
-    
-    h1 {
-        font-size: 50px
-    }
-
-    h3 {
-        font-size: 35px;
-    }
 
     #three-columns {
         flex-direction: column;
-    }
-
-    a {
-        display: block;
-        margin-top: 10px;
-        margin-bottom: 10px;
     }
 }
