--- a/projects/restaurant/css/style.css
+++ b/projects/restaurant/css/style.css
@@ -277,8 +277,7 @@ body {
 .footer-navbar {
     width: 800px;
     margin: 0px auto;
-    display: flex;
-    justify-content: space-between;
+    text-align: center;
 }
 
 .footer-columns-navbar {
@@ -320,7 +319,14 @@ body {
     color: white;
 }
 
-#hero-content-2 p {
+#hero-2 h5 {
+    font-size: 3vw;
+    margin: 0px 5vw 0px 0px;
+    color: white;
+}
+
+
+#hero-content-2 h3 {
     display: block;
     width: 10%; 
     min-width: 500px;
@@ -330,6 +336,7 @@ body {
     font-size: 2vw;
     display: inline-block;
     background-color: #F0C08E;
+    font-weight: bold;
     color: black;
     text-decoration: none;
     padding: 15px;
@@ -340,5 +347,61 @@ body {
 
 #hero-2 a:hover {
     opacity: 90%;
+    color: black;
+}
+
+#centered-column {
+    width: 90vw;
+    max-width: 800px;
+    margin: 48px auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.card {
+    width: 350px;
+    border: 2px solid #F0C08E;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #F0C08E;
+    display: flex;
+    flex-direction: column;
+}
+
+.card img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+.card h2 {
+    font-size: 36px;
+    margin-top: 12px;
+    margin-bottom: 0px
+}
+
+.card p {
+    font-size: 18px;
+    flex: 1;
+}
+
+.card a {
+    text-decoration: none;
+    color: white;
+    background-color: #6E745D;
+    display: inline-block;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    transition: 
+        background-color 0.5s,
+        color 0.5s;
+}
+
+.card a:hover {
+    background-color: transparent;
     color: black;
 }
