--- a/projects/restaurant/css/style.css
+++ b/projects/restaurant/css/style.css
@@ -73,9 +73,7 @@ body {
 
 #layout {
     width: 900px;
-    margin: 48px auto;
-    font-size: 24px;
-    height: 150vh;
+    margin: 20px auto;
 }
 
 #hero-1 {
@@ -275,7 +273,7 @@ body {
 }
 
 .footer-navbar {
-    width: 800px;
+    width: auto;
     margin: 0px auto;
     text-align: center;
 }
@@ -307,7 +305,7 @@ body {
 }
 
 #hero-2 h1 {
-    font-size: 8vw;
+    font-size: 50px;
     margin-bottom: 5vh;
     margin-right: 5vw;
     color: white;
@@ -350,49 +348,52 @@ body {
     color: black;
 }
 
-#centered-column {
-    width: 90vw;
-    max-width: 800px;
+.three-columns {
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.grid-container {
+    display: grid;
+    border-radius: 4px;
+    padding: 8px;
+    width: 800px;
     margin: 48px auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    font-size: 24px;
+    height: 200vh;
 }
 
-.card {
-    width: 350px;
-    border: 2px solid #F0C08E;
-    border-radius: 5px;
-    padding: 10px;
-    background-color: #F0C08E;
-    display: flex;
-    flex-direction: column;
-}
-
-.card img {
+.list img {
     width: 100%;
     height: 150px;
     object-fit: cover;
 }
 
-.card h2 {
-    font-size: 36px;
-    margin-top: 12px;
-    margin-bottom: 0px
+.list h2 {
+    font-size: 3vw;
+    margin: 0px 5vw 0px;
+    text-align: center;
 }
 
-.card p {
-    font-size: 18px;
-    flex: 1;
+.list {
+    border: 2px solid grey;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 24px;
+    font-weight: bold;
+    margin: 10px;
+    padding: 20px 50px;
+    text-align: center;
 }
 
-.card a {
+.list a {
     text-decoration: none;
     color: white;
     background-color: #6E745D;
     display: inline-block;
     width: 100%;
     padding: 10px;
+    margin: 5px;
+    border-radius: 20px;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
@@ -401,7 +402,41 @@ body {
         color 0.5s;
 }
 
-.card a:hover {
-    background-color: transparent;
+.list a:hover {
+    background-color: #F0C08E;
     color: black;
+}
+
+
+@media screen and (min-width:400px) {
+    #header {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .heros h4 {
+        font-size: 50px
+    }
+
+    .heros h2 {
+        font-size: 30px;
+    }
+
+    .heros h3 {
+        font-size: 20px;
+    }
+
+    .heros {
+        font-size: 15px;
+    }
+
+    #grid-container {
+        flex-direction: column;
+    }
+
+    .list a {
+        display: block;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
 }
