--- a/projects/restaurant/css/style.css
+++ b/projects/restaurant/css/style.css
@@ -188,7 +188,7 @@ body {
 }
 
 #content-container {
-    background-image: url("../images/chef-cooking2.jpg");
+    background-image: url("../images/la-piedra-del-penol-guatapae-rock-06215.jpg");
     padding: 48px;
     background-size: cover;
 }
@@ -356,10 +356,8 @@ body {
     display: grid;
     border-radius: 4px;
     padding: 8px;
-    width: 800px;
-    margin: 48px auto;
+    margin: 48px;
     font-size: 24px;
-    height: 200vh;
 }
 
 .list img {
@@ -369,8 +367,7 @@ body {
 }
 
 .list h2 {
-    font-size: 3vw;
-    margin: 0px 5vw 0px;
+    font-size: 36px;
     text-align: center;
 }
 
@@ -381,7 +378,6 @@ body {
     font-size: 24px;
     font-weight: bold;
     margin: 10px;
-    padding: 20px 50px;
     text-align: center;
 }
 
@@ -390,7 +386,6 @@ body {
     color: white;
     background-color: #6E745D;
     display: inline-block;
-    width: 100%;
     padding: 10px;
     margin: 5px;
     border-radius: 20px;
